# myfs

./: .gitignore  CMakeLists.txt  Makefile  debug.sh  disk.c  disk.h  fly_swamp.c  fly_swamp.h  log.c  log.h  myfs.c  myfs.h  params.h  read_fs.py  test.sh
tests/: 0_new_file.test  0_new_file_2.test  13_write_passed_end_of_file.test  14_write_passed_end_mult_blocks.test  15_write_passed_end_mult_blocks.test  17_read.test  19_read_with_null.test  20_read_multi_block.test  21_read_multi_block.test  22_read_passed_end.test  23_read_passed_end.test  2_new_file_long_name.test  3_new_file_space.test  3_write_multiple_blocks.test  3_write_multiple_blocks_2.test  4_file_write.test  4_new_file_in_sub_dir.test  4_write_passed_end_of_file.test  5_file_read.test  5_file_read_2.test  5_file_write.test  5_new_file_in_sub_dir.test  8_write_file_in_sub_dir.test  9_write_file_in_sub_dir.test
tests/good/flies/: 11_file_read  16_read  20_read_multi_block  21_read_multi_block  22_read_passed_end  23_read_passed_end
tests/good/swamps/: 0_new_file  12_write_passed_end_of_file  14_write_passed_end_mult_blocks  15_write_passed_end_mult_blocks  17_read  19_read_with_null  1_new_file  1_new_file_in_sub_dir  20_read_multi_block  21_read_multi_block  22_read_passed_end  23_read_passed_end  2_file_write  2_new_file_long_name  3_new_file_space  3_write_multiple_blocks  3_write_multiple_blocks_2  4_new_file_in_sub_dir  4_write_passed_end_of_file_2  5_file_read  5_file_read_2  5_new_file_in_sub_dir  7_write  9_write_file_in_sub_dir
